# project3

./: README.md  distance algorithm.ino  motorcontrol2.ino  process1.py  process2.py
manipulator algorithm/process1/: barcode.py  main.py  send_z.py  slider.py
manipulator algorithm/process2/: agv_socket.py  process2.py  process2_conv.py  step.py
myCobot/: fake_controllers.yaml  firefighter.srdf  joint_limits.yaml  new_mycobot_pro_320moveit_m5_2022.urdf  readme  ros_controllers.yaml
mycobot_description/urdf/mycobot_280_m5/: pump_box.dae
mycobot_description/urdf/mycobot_280_pi/: pump_head.dae
mycobot_description/urdf/mycobot_pro_630/: base.dae  link3.dae  link4.dae  link5.dae  link6.dae
mycobot_ros/: set.py  test.py  tets.py
mycobot_ros/mycobot_320/new_mycobot_320/: CMakeLists.txt
mycobot_ros/mycobot_320/new_mycobot_320/scripts/: project2_slider.py  (+1 more)
mycobot_ros/mycobot_320/new_mycobot_320_moveit/: CMakeLists.txt
mycobot_ros/mycobot_320/new_mycobot_320_moveit/config/: fake_controllers.yaml  firefighter.srdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
mycobot_ros/mycobot_320/new_mycobot_320_moveit/launch/: moveit.rviz
mycobot_ros/mycobot_320/new_mycobot_320_moveit/scripts/: agv_socket.py  barcode.py  project2_moveit_main.py  project2_yolo.py  test_movetopose.py  test_movetopose2.py  test_node.py
project3/: package.xml
project3/launch/: process3.launch
project3/project3/: CMakeLists.txt
project3/project3/scripts/: send_z.py
project3/scripts/: agv_socket.cpp  agv_socket.py  main.py  process2.py  process2_conv.py  send_z.cpp  step.py
(+11 files in other folders)
